@@ -71,8 +71,10 @@ class DisplayDevice
 	virtual int get_chars_per_line()=0;
 	virtual int get_chars_per_column()=0;
 	virtual fim_coo_t width()=0;
-	virtual fim_bpp_t get_bpp()=0;
-	virtual fim_coo_t height()=0;
+	virtual fim_bpp_t get_bpp(void)=0;
+	virtual fim_coo_t height(void)=0;
+	virtual fim_coo_t status_line_height(void)const=0;
+	/* virtual fim_coo_t font_width()const{return 1;} */
 	virtual fim_err_t status_line(const fim_char_t *msg)=0;
 	fim_err_t console_control(fim_cc_t code);
 	virtual fim_bool_t handle_console_switch()=0;
