@@ -58,7 +58,8 @@ class DummyDisplayDevice:public DisplayDevice
 	virtual fim_bool_t handle_console_switch(){return false;}
 	virtual fim_err_t clear_rect(fim_coo_t x1, fim_coo_t x2, fim_coo_t y1,fim_coo_t y2){return FIM_ERR_NO_ERROR;}
 	fim_err_t fs_puts(struct fs_font *f, fim_coo_t x, fim_coo_t y, const fim_char_t *str){return FIM_ERR_NO_ERROR;}
-	virtual fim_bpp_t get_bpp(){return 0;};
+	virtual fim_bpp_t get_bpp(void){return 0;}
+	virtual fim_coo_t status_line_height(void)const{return 0;}
 
 	private:
 };
